Filter workflow execution by status by DB query
Signed-off-by: Moti Asayag <masayag@redhat.com>